# avel

./: .gitignore  Dockerfile  app.yaml  auto.py  backlog.md  cockroach-secure.yaml  hell.txt  t.txt  values_cockroach.yaml
avel/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
avel/src/: fns.rs  main.rs
clear/: .Dockerfile  Dockerfile  cron  main.py
cockroach/: alertmanager-config.yaml  alertmanager.yaml  cockroach_issuer.yaml  prometheus.yaml
cockroach-certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  node.crt  node.csr  node.key
docs/: full.md  result.md
jenkins/: pipeline.Jenkinsfile
