[package]
name = "avel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.37.0" }
env_logger = "0.11.3"
url = "2.5.0"
rand = "0.8.5"
log = "0.4.21"
redis = "0.25.3"

